@@ -5,7 +5,6 @@ import static com.crewcrew.global.common.exception.ErrorCode.*;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeParseException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Slice;
@@ -13,6 +12,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.crewcrew.domain.crew.entity.Crew;
+import com.crewcrew.domain.crew.entity.MemberCrew;
 import com.crewcrew.domain.crew.repository.CrewRepository;
 import com.crewcrew.domain.crew.repository.MemberCrewRepository;
 import com.crewcrew.domain.gathering.dto.request.GatheringCreateRequest;
@@ -171,7 +171,7 @@ public class GatheringService {
             .map(
                 gathering -> {
                   List<GatheringParticipantResponse> limitedList =
-                      gathering.getParticipants().stream().limit(4).collect(Collectors.toList());
+                      gathering.getParticipants().stream().limit(4).toList();
                   return GatheringReviewResponse.builder()
                       .id(gathering.getId())
                       .title(gathering.getTitle())
@@ -183,9 +183,77 @@ public class GatheringService {
                       .participants(limitedList)
                       .build();
                 })
-            .collect(Collectors.toList());
+            .toList();
 
     return new PagedResponse<>(limitedParticipants, gatherings.hasNext());
+  }
+
+  @Transactional
+  public void leaveGatheringParticipation(String email, Long crewId, Long gatheringId) {
+    Member member =
+        memberRepository.findByEmail(email).orElseThrow(() -> new ApiException(MEMBER_NOT_FOUND));
+
+    Crew crew = crewRepository.findById(crewId).orElseThrow(() -> new ApiException(CREW_NOT_FOUND));
+
+    Gathering gathering =
+        gatheringRepository
+            .findById(gatheringId)
+            .orElseThrow(() -> new ApiException(GATHERING_NOT_FOUND));
+
+    MemberCrew memberCrew =
+        memberCrewRepository
+            .findByMemberAndCrew(member, gathering.getCrew())
+            .orElseThrow(() -> new ApiException(CREW_MEMBER_NOT_FOUND));
+
+    GatheringParticipant participant =
+        participantRepository
+            .findByGatheringAndMember(gathering, member)
+            .orElseThrow(() -> new ApiException(NOT_GATHERING_PARTICIPANT));
+
+    if (participant.isGatheringCaptain()) {
+      throw new ApiException(GATHERING_CAPTAIN_LEAVE_DENIED);
+    }
+
+    if (gathering.getDateTime().isBefore(LocalDateTime.now())) {
+      throw new ApiException(GATHERING_COMPLETED);
+    }
+
+    participantRepository.delete(participant);
+  }
+
+  @Transactional
+  public void deleteGathering(String email, Long crewId, Long gatheringId) {
+    Member member =
+        memberRepository.findByEmail(email).orElseThrow(() -> new ApiException(MEMBER_NOT_FOUND));
+
+    Crew crew = crewRepository.findById(crewId).orElseThrow(() -> new ApiException(CREW_NOT_FOUND));
+
+    Gathering gathering =
+        gatheringRepository
+            .findById(gatheringId)
+            .orElseThrow(() -> new ApiException(GATHERING_NOT_FOUND));
+
+    if (!gathering.getCrew().getId().equals(crewId)) {
+      throw new ApiException(GATHERING_NOT_IN_CREW);
+    }
+
+    if (gathering.getDateTime().isBefore(LocalDateTime.now())) {
+      throw new ApiException(GATHERING_COMPLETED);
+    }
+
+    GatheringParticipant captain =
+        participantRepository
+            .findByGatheringAndMember(gathering, member)
+            .orElseThrow(() -> new ApiException(NOT_GATHERING_PARTICIPANT));
+
+    if (!captain.isGatheringCaptain()) {
+      throw new ApiException(GATHERING_CAPTAIN_PERMISSION_DENIED);
+    }
+
+    likeRepository.deleteByGathering(gathering);
+    participantRepository.deleteByGathering(gathering);
+
+    gatheringRepository.delete(gathering);
   }
 
   private void validateGatheringJoin(Gathering gathering, Long gatheringId, Long memberId) {
